corrected textarea spacing

--- a/packages/scandipwa/src/component/ProductReviewForm/ProductReviewForm.style.scss
+++ b/packages/scandipwa/src/component/ProductReviewForm/ProductReviewForm.style.scss
@@ -55,7 +55,7 @@
             margin-block-start: 12px;
 
             &-ErrorMessages {
-                padding-block-start: 3px;
+                padding-block-start: 6px;
             }
         }
 
